--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "leaflet-geosearch": "^2.0.3",
     "mongoose": "^4.8.6",
     "path": "^0.12.7"
   },
