--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "## Run $ bundle exec jekyll s",
   "main": "app.js",
+  "scripts": {
+      "start": "node app.js"
+  }
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
