--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "wheretogo",
   "version": "1.0.0",
   "description": "## Run $ bundle exec jekyll s",
-  "scripts": {
-      "start": "node app.js"
-  },
+  "main": "app.js",
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
@@ -14,7 +12,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
