--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node ./bin.www"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
